compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__clever_pipe_rewriting.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"
---
----- SOURCE CODE

pub fn apply(f: fn(a) -> b, a: a) { a |> f }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([apply/2]).

-spec apply(fun((I) -> J), I) -> J.
apply(F, A) ->
    _pipe = A,
    F(_pipe).
