compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_list.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "pub fn x(f) {\n  [\n    1 |> f\n  ]\n}"
---
----- SOURCE CODE
pub fn x(f) {
  [
    1 |> f
  ]
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([x/1]).

-spec x(fun((integer()) -> L)) -> list(L).
x(F) ->
    [begin
        _pipe = 1,
        F(_pipe)
    end].
